<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/curiousBlue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.youth4work.prepapp.ui.startup.GettingStartedActivity"
    tools:ignore="MissingPrefix">

    <com.youth4work.prepapp.ui.views.CustomTextViewFontBold
        android:id="@+id/txt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/free_trail"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <com.youth4work.prepapp.ui.views.CustomTextViewFontRegular
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/prepare_message"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <com.youth4work.prepapp.ui.views.PrepButton
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:text="@string/get_started"
        android:textColor="@android:color/white"
        app:buttonColor="@color/tangaroa"
        app:cornerRadius="3dp"
        app:shadowEnabled="false"
        app:shadowHeight="1dp" />

</RelativeLayout>
