<?xml version="1.0" encoding="utf-8"?>
<com.vlonjatg.progressactivity.ProgressRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/progressActivity"
    tools:context="com.youth4work.prepapp.ui.startup.ForgotPasswordActivity"
    tools:ignore="MissingPrefix">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/emailid"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/emailid"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />

    <com.youth4work.prepapp.ui.views.CustomTextViewFontRegular
        android:id="@+id/txt_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/password_reset_link_has_been_emailed_to_you"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.youth4work.prepapp.ui.views.PrepButton
        android:id="@+id/btn_send_reset_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:text="@string/send_reset_link"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        app:buttonColor="@color/curiousBlue"
        app:cornerRadius="3dp"
        app:shadowEnabled="false"
        app:shadowHeight="1dp" />

</com.vlonjatg.progressactivity.ProgressRelativeLayout>
