<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.youth4work.prepapp.ui.payment.PlanReviewActivity"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/payment_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/lyt_payment_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <com.youth4work.prepapp.ui.views.CustomTextViewFontBold
                        android:id="@+id/txt_plan_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plan_name"
                        android:textColor="@color/mine_shaft"
                        android:textSize="18sp" />

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/txt_plan_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/price_only"
                        android:textColor="@color/mine_shaft"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.youth4work.prepapp.ui.views.CustomTextViewFontRegular
                        android:id="@+id/txt_plan_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_plan_name"
                        android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/plan_description"
                        android:textColor="@color/montana" />
                </RelativeLayout>

                <View
                    android:id="@+id/viewSep"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/lyt_payment_details"
                    android:background="@color/concrete" />

                <com.youth4work.prepapp.ui.views.CustomTextViewFontBold
                    android:id="@+id/txt_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewSep"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/total"
                    android:textColor="@color/mine_shaft"
                    android:textSize="18sp" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/txt_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/txt_total_label"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/price_only"
                    android:textColor="@color/mine_shaft"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/personal_details_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/payment_cv"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/lyt_personal_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.youth4work.prepapp.ui.views.CustomTextViewFontBold
                    android:id="@+id/txt_personal_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/personal_details"
                    android:textColor="@color/mine_shaft"
                    android:textSize="18sp" />

                <com.youth4work.prepapp.ui.views.CustomTextViewFontRegular
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/ravindra"
                    android:textColor="@color/rangoon_green"
                    android:textSize="16sp" />

                <com.youth4work.prepapp.ui.views.CustomTextViewFontRegular
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/ravidsrk_gmail_com"
                    android:textColor="@color/rangoon_green"
                    android:textSize="16sp" />

                <com.youth4work.prepapp.ui.views.CustomTextViewFontRegular
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/_9945036812"
                    android:textColor="@color/rangoon_green"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.youth4work.prepapp.ui.views.CustomTextViewFontBold
            android:id="@+id/paywith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_details_cv"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Pay Via"
            android:textColor="@color/mine_shaft"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/payment_gatway_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/paywith"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:id="@+id/paytmimage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/paytmlogo" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/paytmimage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="13dp"
                android:text="@string/credit_card_debit_card_net_banking_paytm"
                android:textColor="@color/mine_shaft"
                android:textSize="16sp" />

            <Button
                android:id="@+id/pay_with_paytm"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/state_pressed_ripple"
                android:text="@string/pay_now"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_google_pay"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_below="@+id/textView5"
                android:layout_alignStart="@+id/pay_with_paytm"
                android:layout_alignLeft="@+id/pay_with_paytm"
                android:layout_marginTop="16dp"
                android:background="@drawable/state_pressed_ripple"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="Pay Now"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_below="@+id/paytmimage"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:scaleType="fitCenter"
                android:src="@drawable/googlepay"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignBottom="@+id/btn_google_pay"
                android:layout_marginBottom="6dp"
                android:text="@string/googlegay"
                android:textColor="@color/mine_shaft"
                android:textSize="16sp"
                android:visibility="invisible" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_zero_update"
            android:layout_below="@+id/personal_details_cv"
            android:background="@drawable/blue_border"
            android:layout_width="wrap_content"
            android:text="Update Now"
            android:textAllCaps="false"
            android:drawablePadding="8dp"
            android:onClick="ZeroUpdate"
            android:visibility="gone"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="28sp"
            android:drawableRight="@drawable/assets_01_ic_arrow_left"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:layout_margin="16dp"
            android:layout_height="wrap_content" />

        <include layout="@layout/activity_paytm_payments"/>
    </RelativeLayout>

</ScrollView>
